--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,27 @@
 <section class="todoapp">
   <header class="header">
     <app-title></app-title>
-    <input class="new-todo" placeholder="What needs to be done?" autofocus>
+    <input class="new-todo" [placeholder]="inputHint" (keyup.enter)="addTodo($event.target)" autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main">
     <input id="toggle-all" class="toggle-all" type="checkbox">
     <label for="toggle-all">Mark all as complete</label>
-    <ul class="todo-list">
+    <ul class="todo-list" *ngFor="let todo of todos">
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-      <li class="completed">
+      <!-- <li class="completed">
         <div class="view">
           <input class="toggle" type="checkbox" checked>
           <label>Taste JavaScript</label>
           <button class="destroy"></button>
         </div>
         <input class="edit" value="Create a TodoMVC template">
-      </li>
+      </li> -->
       <li>
         <div class="view">
           <input class="toggle" type="checkbox">
-          <label>Buy a unicorn</label>
+          <label>{{todo}}</label>
           <button class="destroy"></button>
         </div>
         <input class="edit" value="Rule the web">
