--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <input class="new-todo" [placeholder]="inputHint" [(ngModel)]="todo" (keyup.enter)="addTodo()" autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
-  <section class="main">
+  <section class="main" *ngIf="todos.length">
     <input id="toggle-all" class="toggle-all" type="checkbox">
     <label for="toggle-all">Mark all as complete</label>
     <ul class="todo-list" *ngFor="let todo of todos">
@@ -20,8 +20,8 @@
       </li> -->
       <li>
         <div class="view">
-          <input class="toggle" type="checkbox">
-          <label>{{todo}}</label>
+          <input class="toggle" type="checkbox" [(ngModel)]="todo.done">
+          <label>{{todo.text}}</label>
           <button class="destroy"></button>
         </div>
         <input class="edit" value="Rule the web">
@@ -29,7 +29,7 @@
     </ul>
   </section>
   <!-- This footer should hidden by default and shown when there are todos -->
-  <footer class="footer">
+  <footer class="footer" *ngIf="todos.length">
     <!-- This should be `0 items left` by default -->
     <span class="todo-count">
       <strong>0</strong> item left</span>
